--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>hmmbinary</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <script src="main.js"></script>
+    <link rel="apple-touch-startup-image" href="/favicon.jpg">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
     <h1>hmmbinary</h1>
+    <p>Communicate using only words hm and mm</p>
     <button onclick="document.getElementById('encoding').style.display = 'block'; document.getElementById('decoding').style.display = 'none'">Encode</button>
     <button onclick="document.getElementById('decoding').style.display = 'block'; document.getElementById('encoding').style.display = 'none'">Decode</button>
     <div id="encoding">
